# programming_technology

./: CMakeLists.txt  README.md  hgf.cpp
cmake/: build_prefix.cmake
doc/: CMakeLists.txt  doxyfile.in  labs.dox
natt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
prj.course/: Документация Тужилкина.docx  Отчет vktracker.docx  Отчет Тужилкина.docx
prj.course/src/: CMakeLists.txt  config.ini  followed.cpp  followed.h  followed.ui  login.cpp  login.h  login.ui  notification.h  vk.cpp  vk.h  vktracker.cpp  vktracker.h  vktracker.ui
prj.course/vktracker/: CMakeLists.txt  README.md  config.ini  followed.cpp  followed.h  followed.ui  login.cpp  login.h  main.cpp  notification.cpp  notification.h  notification.ui  src.qrc  vk.cpp  vk.h  vktracker.cpp  vktracker.h  vktracker.ui
prj.lab/: CMakeLists.txt
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.lab/dynarray/: CMakeLists.txt  dynarray.cpp  dynarray.h
prj.lab/dynarrayt/: CMakeLists.txt  dynarrayt.cpp  dynarrayt.h
prj.lab/long_int/: CMakeLists.txt  long_int.cpp  long_int.h
prj.lab/matrixa/: CMakeLists.txt  matrixa.cpp  matrixa.h
prj.lab/matrixl/: CMakeLists.txt  matrixl.cpp  matrixl.h
prj.lab/ortorect/: CMakeLists.txt  ortorect.cpp  ortorect.h
prj.lab/ortosegm/: CMakeLists.txt  ortosegm.cpp  ortosegm.h
prj.lab/queue/: CMakeLists.txt  queue.cpp  queue.h
prj.lab/queuea/: CMakeLists.txt  queuea.cpp  queuea.h
prj.lab/queuel/: CMakeLists.txt  queuel.cpp  queuel.h
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.h
prj.lab/stackl/: CMakeLists.txt  stackl.cpp  stackl.h
prj.labs/: Rational.cpp
prj.labs/Complex/: Complex.cpp  Complex.sln
prj.labs/Rational/: Rational.sln
prj.labs/complex/: CMakeLists.txt  complex.cpp
prj.samples/: CMakeLists.txt
prj.samples/hello/: CMakeLists.txt  hello.cpp
prj.samples/minimal_program/: CMakeLists.txt  minimal_program.cpp
prj.test/: CMakeLists.txt
prj.test/catch2_complex/: CMakeLists.txt  catch2_complex.cpp
prj.test/catch2_dynarray/: CMakeLists.txt  catch2_dynarray.cpp
prj.test/catch2_matrixa/: CMakeLists.txt  catch2_matrixa.cpp
prj.test/catch2_queuea/: CMakeLists.txt  catch2_queuea.cpp
prj.test/catch2_queuel/: CMakeLists.txt  catch2_queuel.cpp
prj.test/catch2_rational/: CMakeLists.txt  catch2_rational.cpp
prj.test/catch2_stackl/: CMakeLists.txt  catch2_stackl.cpp
prj.test/test_complex/: CMakeLists.txt  test_complex.cpp
prj.test/test_dynarray/: CMakeLists.txt  test_dynarray.cpp
prj.test/test_dynarrayt/: CMakeLists.txt  test_dynarrayt.cpp
prj.test/test_long_int/: CMakeLists.txt  test_long_int.cpp
prj.test/test_matrixa/: CMakeLists.txt  test_matrixa.cpp
prj.test/test_matrixl/: CMakeLists.txt  test_matrixl.cpp
prj.test/test_ortorect/: CMakeLists.txt  test_ortorect.cpp
prj.test/test_ortosegm/: CMakeLists.txt  test_ortosegm.cpp
prj.test/test_queue/: CMakeLists.txt  test_queue.cpp
prj.test/test_queuea/: CMakeLists.txt  test_queuea.cpp
prj.test/test_rational/: CMakeLists.txt  test_rational.cpp
prj.test/test_stack/: CMakeLists.txt  test_stack.cpp
