add_subdirectory(complex)
add_subdirectory(rational)
add_subdirectory(long_int)
add_subdirectory(dynarray)
add_subdirectory(matrixa)
add_subdirectory(matrixl)
add_subdirectory(queuea)
add_subdirectory(stackl)
add_subdirectory(dynarrayt)
add_subdirectory(ortorect)
add_subdirectory(ortosegm)
add_subdirectory(queuel)