add_subdirectory(test_complex)
add_subdirectory(test_rational)
add_subdirectory(test_long_int)
add_subdirectory(test_dynarray)
add_subdirectory(test_dynarrayt)
add_subdirectory(test_matrixa)
add_subdirectory(test_matrixl)
add_subdirectory(test_queue)
add_subdirectory(test_stack)
add_subdirectory(test_ortorect)
add_subdirectory(catch2_complex)
add_subdirectory(catch2_dynarray)
add_subdirectory(catch2_rational)
add_subdirectory(catch2_matrixa)
add_subdirectory(catch2_stackl)
add_subdirectory(test_ortosegm)

